[gd_scene load_steps=2 format=2]

[ext_resource path="res://lobby/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Connection" type="Panel" parent="."]
margin_left = 300.0
margin_top = 200.0
margin_right = 724.0
margin_bottom = 367.0

[node name="MarginContainer" type="MarginContainer" parent="Connection"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Connection/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 414.0
margin_bottom = 157.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="Connection/MarginContainer/VBoxContainer"]
margin_right = 404.0
margin_bottom = 34.0
size_flags_vertical = 7
text = "Connection"

[node name="HBoxContainer3" type="HBoxContainer" parent="Connection/MarginContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 404.0
margin_bottom = 73.0
custom_constants/separation = 20

[node name="NameLabel" type="Label" parent="Connection/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 46.0
margin_bottom = 19.0
text = "Name :"

[node name="PlayerName" type="LineEdit" parent="Connection/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 66.0
margin_right = 404.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Connection/MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 404.0
margin_bottom = 112.0
custom_constants/separation = 20

[node name="AddressLabel" type="Label" parent="Connection/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
text = "Address :"

[node name="Host" type="LineEdit" parent="Connection/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 80.0
margin_right = 326.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="Port" type="LineEdit" parent="Connection/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 346.0
margin_right = 404.0
margin_bottom = 24.0
text = "5000"

[node name="HBoxContainer" type="HBoxContainer" parent="Connection/MarginContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 404.0
margin_bottom = 147.0
custom_constants/separation = 20

[node name="HostButton" type="Button" parent="Connection/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 192.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Host"

[node name="JoinButton" type="Button" parent="Connection/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 212.0
margin_right = 404.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Join"

[node name="Waiting" type="Panel" parent="."]
visible = false
margin_left = 380.0
margin_top = 100.0
margin_right = 644.0
margin_bottom = 467.0

[node name="MarginContainer" type="MarginContainer" parent="Waiting"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Waiting/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 254.0
margin_bottom = 357.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Waiting/MarginContainer/VBoxContainer"]
margin_right = 244.0
margin_bottom = 14.0
text = "Wait for players"

[node name="Players" type="ItemList" parent="Waiting/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 244.0
margin_bottom = 317.0
size_flags_vertical = 3

[node name="StartGame" type="Button" parent="Waiting/MarginContainer/VBoxContainer"]
margin_top = 327.0
margin_right = 244.0
margin_bottom = 347.0
text = "Start game"

[connection signal="pressed" from="Connection/MarginContainer/VBoxContainer/HBoxContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Connection/MarginContainer/VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="Waiting/MarginContainer/VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
